--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -128,6 +128,8 @@
         href: /dynamics365/customer-service/develop/extend-omnichannel?context=/dynamics365/contact-center/context/extend-context
       - name: Overview of entity reference
         href: /dynamics365/customer-service/develop/reference/about-entity-reference?context=/dynamics365/contact-center/context/extend-context
+      - name: Closure options and descriptions
+        href: /dynamics365/contact-center/extend
     - name: Responsible AI
       items:
       - name: Overview
