--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -76,6 +76,28 @@
             href: /dynamics365/customer-service/develop/test-custom-channel-sample-html?context=/dynamics365/contact-center/context/extend-context
           - name: Markdown formats in custom channels that use Direct Line
             href: /dynamics365/customer-service/develop/markdown-formats-dev?context=/dynamics365/contact-center/context/extend-context   
+        - name: Custom channel using messaging APIs
+          items:
+          - name: Overview of messaging APIs
+            href: intro-messaging-apis.md
+          - name: Configure a custom messaging channel using messaging APIs
+            href: configure-custom-messaging-channel.md
+          - name: API endpoints
+            items:
+            - name: `/consumer/conversations/create`
+              href: api/api-conversation-create.md
+            - name: `/conversation/{id}`
+              href: api/api-conversation-conversationid.md
+            - name: `/conversations`
+              href: api/api-conversation.md
+            - name: `/conversation/{conversationId}/messages`
+              href: api/api-conversation-messages.md  
+            - name: `/conversation/{conversationId}/contexts`
+              href: api/api-conversation-context.md            
+            - name: Use webhook to receive messages and events
+              href: api/api-conversation-webhook.md    
+          - name: Error handling
+            href: error-handling.md                   
       - name: Copilot in Customer Service
         items:  
         - name: Download Copilot transcripts and interaction data
