Category:  New content Workitem: https://dev.azure.com/msft-skilling/Content/_workitems/edit/448389 Description: nlu+content

--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -86,6 +86,8 @@
           href: faq-rai-ai-agents.md
         - name: Responsible AI FAQ for Copilot in Customer Service
           href: /dynamics365/customer-service/implement/faq-responsible-ai-copilot?context=/dynamics365/contact-center/context/implement-context
+        - name: Responsible AI FAQs for NLUs in AI agents
+          href: rai-faq-nlu.md
       - name: Resources
         items:
         - name: Dynamics 365 reference architectures
