--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -270,13 +270,13 @@
           href: /dynamics365/customer-service/administer/voice-channel-pricing-scenarios?context=/dynamics365/contact-center/context/administer-context
         - name: FAQ about the voice channel
           href: /dynamics365/customer-service/administer/voice-channel-faqs?context=/dynamics365/contact-center/context/administer-context
-      - name: AI hub
+      - name: AI hub (preview)
         items:
         - name: Learn guide for AI agents and Copilot features
           items:
           - name: Trust center for Dynamics 365
             href: trust-center.md
-        - name: Autonomous service agents (preview)
+        - name: Autonomous service agents
           items:
           - name: Overview of autonomous service agents
             href: autonomous-agents-overview.md
@@ -295,8 +295,7 @@
             - name: Configure intent-based suggestions for Copilot agents
               href: set-up-intent-agent.md
         - name: Use rollout manager
-          href: use-rollout manager.md
-        -   
+          href: use-rollout-manager.md
       - name: Copilot in Contact Center
         items:
         - name: Manage Copilot features
