--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -222,6 +222,8 @@
           href: /dynamics365/customer-service/administer/voice-channel-outbound-calling?context=/dynamics365/contact-center/context/administer-context
         - name: Enable representatives to search for contacts and open records from outbound dialer (preview)
           href: /dynamics365/customer-service/administer/add-outbound-dialer-settings?context=/dynamics365/contact-center/context/administer-context  
+        - name: Configure Citrix virtual desktop for improved call quality
+          href: configure-citrix-virtual-desktop-for-voice.md
         - name: Use Azure Virtual Desktop to access voice channel
           href: configure-voice-avd.md
         - name: Install and manage Desktop companion application 
