--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -144,6 +144,12 @@
               href: /power-apps/user/email-template-convert?context=/dynamics365/contact-center/context/use-context
             - name: Create a signature for emails
               href: /power-apps/user/email-signature?context=/dynamics365/contact-center/context/use-context
+      - name: Inbox
+        items:
+          - name: Use the inbox
+            href: /dynamics365/customer-service/use/use-inbox?context=/dynamics365/context/contact-center-context            
+          - name: Create personalized inbox views
+            href: /dynamics365/customer-service/use/inbox-create-personalized-view?context=/dynamics365/context/contact-center-context            
           - name: Email FAQ and known issues
             href: /power-apps/user/activities-known-issues?context=/dynamics365/contact-center/context/use-context
       - name: Use messaging channels
