--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -274,6 +274,8 @@
         items:
         - name: Learn guide for AI agents and Copilot features
           items:
+          - name: Overview of AI hub
+            href: overview-ai-hub.md
           - name: Trust center for Dynamics 365
             href: trust-center.md
         - name: Autonomous service agents
@@ -282,7 +284,7 @@
             href: autonomous-agents-overview.md
           - name: Manage consumption-based billing, capacity
             href: /dynamics365/customer-service/administer/setup-pay-as-you-go?context=/dynamics365/contact-center/context/administer-context
-          - name: Customer Intent Agent 
+          - name: Customer Intent Agent
             items:
             - name: Overview of Customer Intent Agent
               href: overview-customer-intent-agent.md
@@ -294,7 +296,7 @@
               href: enable-intent-for-service-reps.md
             - name: Configure intent-based suggestions for Copilot agents
               href: set-up-intent-agent.md
-        - name: Use rollout manager
+        - name: Use rollout manager to manage AI agents
           href: use-rollout-manager.md
         - name: Supervise AI agents
           href: supervise-ai-agents.md
