--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -222,10 +222,10 @@
           href: /dynamics365/customer-service/administer/voice-channel-outbound-calling?context=/dynamics365/contact-center/context/administer-context
         - name: Enable representatives to search for contacts and open records from outbound dialer (preview)
           href: /dynamics365/customer-service/administer/add-outbound-dialer-settings?context=/dynamics365/contact-center/context/administer-context  
-        - name: Configure setting for improved call quality over Citrix virtual desktop
-          href: configure-voice-for-citrix-virtual-desktop.md
         - name: Use Azure Virtual Desktop to access voice channel
           href: configure-voice-avd.md
+        - name: Configure settings to improve call quality over Citrix virtual desktop
+          href: configure-voice-for-citrix-virtual-desktop.md
         - name: Install and manage Desktop companion application 
           href: install-manage-desktop-app.md
         - name: Support emergency calls made by customer service representatives
