Added ToC entry

--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -280,6 +280,8 @@
             href: overview-agent-hub.md
           - name: Trust center for Dynamics 365
             href: trust-center.md
+          - name: Security FAQs about AI agents
+            href: agent-hub-security-faqs.md  
         - name: Autonomous service agents
           items:
           - name: Overview of autonomous service agents
