--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -76,6 +76,10 @@
             href: /dynamics365/customer-service/develop/test-custom-channel-sample-html?context=/dynamics365/contact-center/context/extend-context
           - name: Markdown formats in custom channels that use Direct Line
             href: /dynamics365/customer-service/develop/bring-your-own-channel#markdown-formats-in-custom-channels?context=/dynamics365/contact-center/context/extend-context   
+      - name: Voice
+        items: 
+        - name: Download call recordings in bulk
+          href: download-call-recordings-bulk.md
       - name: Copilot in Customer Service
         items:  
         - name: Download Copilot transcripts and interaction data
