--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -224,6 +224,8 @@
           href: /dynamics365/customer-service/administer/add-outbound-dialer-settings?context=/dynamics365/contact-center/context/administer-context  
         - name: Use Azure Virtual Desktop to access voice channel
           href: configure-voice-avd.md
+        - name: Set up microphone connection on representative sign-in
+          href: set-up-microphone-connection.md  
         - name: Configure settings to improve call quality over Citrix virtual desktop
           href: configure-voice-citrix-virtual-desktop.md
         - name: Install and manage Desktop companion application 
