--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -80,6 +80,8 @@
         items: 
         - name: Download call recordings in bulk
           href: download-call-recordings-bulk.md
+        - name: Use APIs to pause, resume transcription and recording 
+          href: api/record-transcription-api.md
       - name: Copilot in Customer Service
         items:  
         - name: Download Copilot transcripts and interaction data
