--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -88,6 +88,10 @@
           href: /dynamics365/customer-service/implement/faq-responsible-ai-copilot?context=/dynamics365/contact-center/context/implement-context
         - name: Responsible AI FAQs for NLUs in AI agents
           href: natural-language-ai-faq.md
+        - name: Constrained speech recognition
+          items:
+          - name: Transparency note
+            href: transparency-note.md
       - name: Resources
         items:
         - name: Dynamics 365 reference architectures
